--- a/plutus-contract/doc/contract-api.adoc
+++ b/plutus-contract/doc/contract-api.adoc
@@ -66,7 +66,7 @@ The `UtxoAt` effect, available through `utxoAt {2c} HasUtxoAt s => Address -> Co
 
 === Transactions
 
-Contracts write transactions using `writeTx {2c} (HasWriteTx s) => UnbalancedTx -> Contract s e WriteTxResponse`. The transactions produced that way are unbalanced and unsigned. When executing a `writeTx` instruction, the app platform forwards the transaction to the user's wallet to balance it (by adding appropriate public key inputs or outputs) and compute the gas cost of any scripts involved. The finished transaction is then signed by the signing process, and submitted to the wallet which sends it to the blockchain. `writeTx` returns the final transaction's ID once it has been submitted to the blockchain (or an error if the balancing or signing failed).
+Contracts write transactions using `submitTx {2c} (HasWriteTx s, AsContractError e) => UnbalancedTx -> Contract s e TxId`. The transactions produced that way are unbalanced and unsigned. When executing a `submitTx` instruction, the app platform forwards the transaction to the user's wallet to balance it (by adding appropriate public key inputs or outputs) and compute the gas cost of any scripts involved. The finished transaction is then signed by the signing process, and submitted to the wallet which sends it to the blockchain. `submitTx` returns the final transaction's ID once it has been submitted to the blockchain (or throws an error if the balancing or signing failed).
 
 === Endpoints
 
@@ -119,14 +119,14 @@ After having obtained the inputs and the public key we can proceed to produce th
 mkTx :: AddressMap -> PubKey -> UnbalancedTx
 mkTx = undefined
 
-spend :: HasBlockchainActions s => Contract s e ()
+spend :: (AsContractError e, HasBlockchainActions s) => Contract s e ()
 spend = do -- <1>
     (ins, pk) <- collectRec
-    void (writeTx (mkTx ins pk))
+    void (submitTx (mkTx ins pk))
 ----
 <1> We use Haskell's do notation to signal the start of a sequence of actions
 
-In the definition of `spend`, we run the `collectRec` contract from above and then pattern match on its result to get the `ins` and `pk` variables. After that we produce the transaction with `writeTx`.
+In the definition of `spend`, we run the `collectRec` contract from above and then pattern match on its result to get the `ins` and `pk` variables. After that we produce the transaction with `submitTx`.
 
 NOTE: The monad instance of `Contract` is used for sequential composition of contracts.
 
